--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,12 @@
 .container {
   max-width: 1062px;
+  width: 100%;
   margin: auto;
   font-family: "Roboto", sans-serif;
+}
+
+img {
+  width: 100%;
 }
 
 nav {
@@ -9,9 +14,15 @@ nav {
   background-color: black;
 }
 
-nav .flex-parent {
+
+  .nav-wrapper {
   display: flex;
   justify-content: space-evenly;
+
+}
+
+.menu-pic {
+  display: none;
 }
 
 nav ul {
@@ -32,16 +43,24 @@ nav li a {
   color: #ffffff;
 }
 
-.menu {
+.little-nav {
   display: none;
 }
 
+
 .header-section {
-  padding: 135px 0 90px 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 635px;
+  height:100%;
   background-image: url(../images/bg-image-wrapper.png);
+  background-size: cover;
+  background-repeat: no-repeat;
   background-position: 60%;
   text-align: center;
 }
+
+
 
 .header-section h1 {
   font-style: normal;
@@ -93,9 +112,12 @@ nav li a {
 }
 
 .icons {
-  margin-top: 183px;
+  min-height: 183px;
+  height: 100%;
   display: flex;
-  width: 170px;
+  align-items: flex-end;
+  max-width: 170px;
+  width: 100%;
   justify-content: space-between;
   text-align: center;
 }
@@ -130,7 +152,11 @@ main p {
 }
 
 .first-section {
-  padding: 117px 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  min-height:820px;
+  height: 100%;
 }
 
 .first-section .content1,
@@ -160,8 +186,16 @@ main p {
 }
 
 .second-section {
-  padding-top: 82px;
-  padding-bottom: 130px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  min-height: 504px;
+  height: 100%;
+}
+
+.second-second-section-wrapper {
+  display: flex;
+  flex-direction: row;
 }
 
 .second-section .content1 {
@@ -182,6 +216,11 @@ main p {
   width: 60%;
   display: flex;
   flex-direction: column;
+}
+
+.second-section .content1 img {
+  max-width: 45px;
+  width:100%;
 }
 
 .clicks {
@@ -208,9 +247,10 @@ main p {
 
 .slides {
   display: flex;
+  align-items: center;
 }
 
-.slides img {
+.slider-item {
   margin-right: 30px;
 }
 
@@ -228,7 +268,11 @@ h3 {
 }
 
 .third-section {
-  padding: 142px 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  min-height: 867px;
+  height:100%;
 }
 
 .center-flex {
@@ -238,15 +282,20 @@ h3 {
 }
 
 .fourth-section {
-  padding-top: 200px;
-  padding-bottom: 220px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  min-height: 526px;
+  height:100%;
   background-image: url(../images/frame.png);
   background-size: cover;
+  background-repeat: no-repeat
 }
 
 .fourth-section h2 {
   color: white;
   margin-bottom: 30px;
+  text-align: center;
 }
 
 .check {
@@ -271,12 +320,13 @@ form {
   display: inline-block;
   background-color: white;
   width: 340px;
-  height: 46px;
+   height: 46px;
+  
 }
 
 input {
   width: 290px;
-  padding: 13px 24px 13px;
+    padding: 13px 24px 13px;
   vertical-align: center;
   border: none;
 }
@@ -304,7 +354,8 @@ input:focus::placeholder {
 }
 
 .buttons {
-  width: 402px;
+  max-width: 402px;
+  width: 100%;
   display: flex;
   align-items: flex-end;
   justify-content: space-between;
@@ -357,8 +408,11 @@ input:focus::placeholder {
 }
 
 .fifth-section {
-  padding-top: 120px;
-  padding-bottom: 180px;
+ display: flex;
+ flex-direction: column;
+ justify-content: center;
+ min-height: 464px;
+ height: 100%;
 }
 
 .fifth-section p {
@@ -377,7 +431,8 @@ footer {
 }
 
 footer ul {
-  width: 240px;
+  max-width: 240px;
+  width:100%;
   display: flex;
   justify-content: space-between;
   align-items: baseline;
@@ -419,17 +474,26 @@ footer p {
 }
 
 @media (max-width: 900px) {
+
   nav ul {
-    width: 70%;
+    flex-basis: 80%;
   }
+  
+  .second-section .content1, .second-section .content2 {
+    width: 100%;
+  }
+
+  .second-second-section-wrapper {
+    flex-direction: column;
+}
 
   .first-section .content1,
   .third-section .content2 {
     width: 45%;
   }
 
-  h1 {
-    font-size: 60px;
+  .header-section h1 {
+    font-size: 58px;
   }
 
   .header-section p {
@@ -440,12 +504,80 @@ footer p {
     font-size: 30px;
   }
 
-  main p {
+  main p, .bold {
     font-size: 20px;
   }
 
   .footer-flex-parent {
     padding: 30px 0 30px 0;
 }
+
+}
+
+@media (max-width: 768px)  {
+  main .flex-parent {
+    align-items: center;
+  }
+
+
+  .header-section h1 {
+    font-size: 48px; 
+  }
+  
+  img {
+    width:70%;
+  }
+
+  .first-section .content1,
+  .third-section .content2 {
+    width: 80%;
+  }
+
+  .first-section .content2 {
+    display:flex;
+    justify-content: flex-end;
+  }
+
+  .fifth-section p {
+    width: 90%;
+  }
+
+ 
+}
+
+@media (max-width: 600px) {
+  .nav-wrapper {
+    display: none;
+  }
+
+  
+  .menu-pic {
+    display: block;
+    margin-left:10px;
+    max-width:32px;
+    width: 100%;
+  }
+
+  .first-section .content2, .second-section .content2, .third-section .content1, footer p, .footer-logo  {
+    display: none;
+  }
+
+  .first-section .content1, .third-section .content2 {
+    width: 90%;
+    
+  }
+
+  .second-section .content1 p {
+    width: 90%;
+  }
+
+  .search {
+    width: 230px;
+  }
+  
+  .buttons {
+    flex-direction: column;
+    align-items: center;
+  }
 
 }
